# ilamp

./: .gitignore  CMakeLists.txt  README.md
data/: iris.10d  iris.27d  iris.6d  iris_10d.2d  iris_27d.2d  iris_5d.2d  iris_6d.2d  iris_out.10d  iris_out.27d  iris_out.5d  iris_out.6d  iris_out_dist.10d  iris_out_dist.27d  iris_out_dist.5d  iris_out_dist.6d
data/Cubes/: Cubes.2d  Cubes.ilp  Cubes.nd  cube.ply  pole.ply  pyramid.ply
data/Figurantes/: figurante1.nor  figurante1.vert  figurante2.nor  figurante2.vert  figurante3.nor  figurante3.vert  figurante4.nor  figurante4.vert  figurante5.nor  figurante5.vert  figurante6.nor  figurante6.vert  figurante7.nor  figurante7.vert  figurante8.nor  figurante8.vert  figurantes.2d  figurantes.ilp  figurantes.tri  figurantes.uv
data/Mesh/: cube.quad  cube.tri  cube.vert
doc/: laplace_50.mlx  meshlab_convert.bat  meshlab_laplace.bat
msvc/: 3d2Nd.vcxproj  3d2Nd.vcxproj.filters  CreateAndLinkDLLTut.vcxproj  OpenCV_Debug_x64.props  OpenCV_Release_x64.props  detail_displace.vcxproj  detail_displace.vcxproj.filters  ilamp.sln  ilamp.vcxproj  ilamp.vcxproj.filters  ilamp_dll.vcxproj  ilamp_dll.vcxproj.filters  imp.vcxproj  imp.vcxproj.filters  imp_test.vcxproj  imp_test.vcxproj.filters  invert_normals.vcxproj  invert_normals.vcxproj.filters  invert_triangles.vcxproj  invert_triangles.vcxproj.filters  lamp.vcxproj  lamp.vcxproj.filters  nd2ply.vcxproj  nd2ply.vcxproj.filters  pca_image.vcxproj  quad_to_tri.vcxproj  quad_to_tri.vcxproj.filters  rbf_imp.vcxproj  rbf_imp.vcxproj.filters  rbf_mpi.vcxproj  rbf_mpi.vcxproj.filters  rbf_sample.vcxproj  rbf_sample.vcxproj.filters  replace_vertices.vcxproj  replace_vertices.vcxproj.filters  split_3d_file.vcxproj  split_3d_file.vcxproj.filters
python/: force_2d.py  lamp.py  lamp_no_control_points.py
python/ilamp_ui/: build_ui.bat  ilampdialog.bat  ilampdialog.py  ilampdialog.ui  ui_ilampdialog.py
src/: 3d2Nd.cpp  CreateAndLinkDLLfile.cpp  CreateAndLinkDLLfile.h  cmdline.h  detail_displace.cpp  eigen_matrix_io.h  ilamp.cpp  ilamp.h  ilamp_dll.cpp  ilamp_project.h  ilamp_utils.h  imp.h  imp_dll.cpp  imp_dll.h  imp_project.h  imp_test.cpp  invert_normals.cpp  invert_triangles.cpp  lamp.cpp  lamp.h  nd2ply.cpp  pca_image.cpp  pca_image.h  quad_to_tri.cpp  rbf_imp.h  rbf_imp_main.cpp  rbf_interpolation.cpp  rbf_interpolation.h  rbf_mpi.h  rbf_mpi_main.cpp  rbf_sample.cpp  replace_vertices.cpp  split_3d_file.cpp  timer.h  tinyobj.h  vector_read_write_binary.h
src/Unity/: PlatformBase.h  RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderingPlugin.cpp
unity/: .gitignore
unity/Assets/Artwork/Figurantes/Materials/: Figurante1.mat  Figurante2.mat  Figurante3.mat  Figurante4.mat  Figurante5.mat  Figurante6.mat  Figurante7.mat  Figurante8.mat  Figurantes.mat  Wireframe.mat
unity/Assets/Artwork/Materials/: defaultMat.mat
unity/Assets/Artwork/Spheres/: Sphere01.ply  Sphere02.ply  Sphere03.ply  Spheres-force.2d  Spheres.2d  Spheres.ilp
unity/Assets/Artwork/UI/: Thumbnail.prefab
unity/Assets/Materials/: LitTexture.mat  UnlitTexture.mat
unity/Assets/Prefabs/: BdsElementUI.prefab  BlendShapeUI.prefab  Lights.prefab
unity/Assets/Presets/: ImpDetailBehaviour.preset
unity/Assets/Scenes/: BlendShapes_Figurantes.unity  Displace_Detail.unity  ILamp.unity  ILamp_Atores.unity  ILamp_Cubes.unity  ILamp_Figurantes.unity  ILamp_Figurantes_3.unity  ILamp_Heads.unity  ILamp_Spheres.unity  ILamp_Test.unity  ILamp_v1.unity  ILamp_v2.unity  Imp_Atores.unity  Imp_Cubes.unity  Imp_Figurantes.unity  Imp_Figurantes_3.unity  Imp_Figurantes_Detail.unity  Imp_Figurantes_Tex.unity  Imp_Spheres.unity
unity/Assets/Scripts/: BlendShapeElementUI.cs  BlendShapesUI.cs  BlitTexture.cs  BlitTextureMaterial.cs  ILamp.cs  ILampUI.cs  ImpBehaviour.cs  ImpBehaviourTex.cs  ImpDetailBehaviour.cs  ImpPlugin.cs  ImpUI.cs  MeshSmoothing.cs  MouseCamera.cs  MouseLight.cs  QuitApplication.cs  SliderInputField.cs  UseRenderingPlugin.cs  VertexConnection.cs
unity/Assets/Scripts/Editor/: Lamp.cs
unity/Assets/Shaders/: BlitTexture.shader  Wireframe.shader
unity/Imp/: Cubes.2d  Cubes_uty.nd  Figurantes8.2d  Figurantes8.nd  Figurantes8detail.2d  Spheres.2d  Spheres.nd
unity/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  ProjectSettings.asset  QualitySettings.asset
